--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,131 @@
-title=Title
-appTitle=SolicitarCita
-appDescription=App Description
+# This is the resource bundle for solicitarcitapr
+
+#Texts for manifest.json
+
+#XTIT: Application name
+author=Kassiel Estefo
+Token=LIFETOKEN159753
+appTitle=Portal de solicitarcitapr
+
+#YDES: Application description
+appDescription=A Fiori application.
+#XTIT: Login view title
+#Component
+textbtnConfirm=Confirmar
+continueText=Continuar
+acceptText=Aceptar
+cancelText=Cancelar
+returnText=Volver
+nextText=Siguiente
+sTextNot=No
+sTextYes=Si
+sTextConfirm=¿Deseas continuar?.
+warningInternet=Por favor verifique su conexión a internet.
+error=error
+errorFTP=error FTP
+errorNoDataExport=No hay registro a exportar.
+sErrorTry=Error tecnico
+sErrorSelect=Selección no Encontrada
+sErrorChangeDatePicker=Formato incorrecto: 
+sTitleExport=Titulo
+
+titleInitSession=Iniciar Sesión
+titleLogin=Inicio de Usuario
+titleMain=Solicitar Cita
+titleOrderNoOC=Entrega Sin Orden de Compra
+textbtnHome=¿Deseas volver al menú de aplicaciones?.
+
+textLogin=Ingresar
+tooltipLogin=Ingresar
+textIconTabFilterPedEmb=Pedidos por Embalar
+textIconTabFilterGenCit=Generar Cita
+textIconTabFilterCitEnt=Citas y Entregas
+textButtonChangeOrder=Modificar Entrega
+textButtonDeleteOrder=Eliminar Entrega
+textButtonOrderNoOC=Entregas sin OC
+textButtonOrdenOC=Entrega con OC
+tooltipRefresh=Refrescar
+tooltipHome=Ir al menu principal
+
+titleFormOrderNoOC=Cabecera
+lbCondicionEntrega=Condición Entrega
+lbEmpresa=Empresa
+lbDestinoFinal=Destino Final
+lbMotivo=Motivo
+lbDestinatarioFinal=Email Destinatario Final
+lbCantidadEmbalaje=Cant. Embalaje
+lbAreaSolicitante=Área Solicitante
+textIngreseCorreo=Ingrese el Correo
+titleEmbalajes=Embalajes
+btnEmbalajesCopy=Duplicar Embalajes
+btnEmbalajesAdd=Agregar Embalajes
+btnEmbalajesDelete=Eliminar Embalajes
+titleItems=Items
+titleItem=Item
+btnItemsAdd=Agregar Items
+btnItemsDelete=Eliminar Items
+titleNEmbalaje=Nº de Embalaje
+titleTipoNEmbalaje=Tipo de Embalaje
+titleDesContenido=Descripcion del Contenido
+titleDesMaterial=Descripcion del Material
+titlePeso=Peso (Kg)
+titleCantidad=Cantidad
+titleLongitud=Longitud(Cm)
+titleUNMMaterial=UNM Material
+titleAncho=Ancho (Cm)
+titleAltura=Altura (Cm)
+titleObservacion=Observación del Material
+btnGuardar=Guardar
+btnCancelar=Cancelar
+
+lblcolumnsociedad = Sociedad
+lblcolumnordencompra = Orden de Compras
+lblcolumnfechaordencompra = Fecha de Orden de Compra
+lblcolumncomprador = Comprador
+
+lblcolumnnumentrega = Número de entrega
+lblcolumnalmdes = Almacén Destino
+lblcolumnconentrega = Condición entrega
+lblcolumncantembalaje = Cantidad de embalaje
+lblcolumnpeso = Peso Total(KG)
+lblcolumnestatus = Estatus de entrega sin OC
+lblcolumnresumen = Resumen de materiales
+textButtonVer = Ver
+
+lblcolumnCita = Cita
+lblcolumnEstatusCita = Estatus
+lblcolumnNumCita = Número de Cita
+lblcolumnNumEntregaCita = Número de entrega
+lblcolumnAlmDesCita = Almacén Destino
+lblcolumnNumGuiaCita = Nº Guia
+lblcolumnCondEntregaCita = Condición de entrega
+lblcolumnFechaCita = Fecha
+lblcolumnHoraCita = Hora
+lblcolumnPesoCita = Peso Embalajes(Kg)
+lblcolumnResumenMatCita = Resumen Materiales
+lblcolumnDescargarDocCita = Descargar Documento
+
+titleEmbalajes = cabecera
+btnModificar = Modificar cond. Entrega
+btnEmbalar = Embalar 
+btnCerrar = Cerrar
+lblDescCond = Cond. Entrega
+lblEbeln = Orden de Compra
+lblEbelpD = Posición
+lblMatnrD = Material
+lblTxz01D = Denominación
+lblEindtD = Fecha Entrega OC
+ObmngD = Pendiente de Envio
+MengezuD = Cantidad a Enviar
+lblMeinsD = UM
+
+textButtonMakeAppointment=Planificar Cita
+textButtonUpdateRegister=Modificar Registro
+textButtonUpdateDate=Modificar Fecha
+textButtonDeleteAppointment=Eliminar Cita
+
+
+ordenNormal = Ordenes Normales
+ordenConsignacion = Ordenes Consignación
+textCorreoNoValido = Correo Electronico Invalido
+textCampoVacio = Campo Vacio
