--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,5 @@
 # This is the resource bundle for solicitarcitapr
-
+sErrorPasswordIncorrect = Contraseña Incorrecta
 #Texts for manifest.json
 
 #XTIT: Application name
