--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -24,6 +24,8 @@ warningInternet=Por favor verifique su conexión a internet.
 error=error
 errorFTP=error FTP
 errorNoDataExport=No hay registro a exportar.
+errorNoDataUser=Ingrese Usuario.
+errorNoDataPassword=Ingrese Contraseña.
 sErrorTry=Error tecnico
 sErrorSelect=Selección no Encontrada
 sErrorChangeDatePicker=Formato incorrecto: 
