--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -62,10 +62,10 @@ titleEmbalajes=Embalajes
 btnEmbalajesCopy=Duplicar Embalajes
 btnEmbalajesAdd=Agregar Embalajes
 btnEmbalajesDelete=Eliminar Embalajes
-titleItems=Items
-titleItem=Item
-btnItemsAdd=Agregar Items
-btnItemsDelete=Eliminar Items
+titleItems=Materiales
+titleItem=Material
+btnItemsAdd=Agregar Material
+btnItemsDelete=Eliminar Material
 titleNEmbalaje=Nº de Embalaje
 titleTipoNEmbalaje=Tipo de Embalaje
 titleDesContenido=Descripcion del Contenido
@@ -131,3 +131,30 @@ ordenNormal = Ordenes Normales
 ordenConsignacion = Ordenes Consignación
 textCorreoNoValido = Correo Electronico Invalido
 textCampoVacio = Campo Vacio
+sErrorNotSelectEmb=No se puede añadir material sin seleccionar un embalaje
+lblOtros=Otros
+sErrorNotEmb=No se ha generado ningun embalaje
+sErrorNotItem=No se ha generado ningun material
+sErrorNotSelectEmbNum=Tabla: Embalajes \n Campo no Seleccionado: Embalaje N°
+sErrorCampTipoEmb=\nCampo Tipo de Embalaje
+sErrorNotInputEmbNum=Tabla: Embalajes \n Campo vacio: Embalaje N°
+sErrorCampDesc=\n Campo Descripcion del Contenido
+sErrorCampPeso=\n Campo Peso(Kg)
+sErrorCampCero=Tabla: Embalajes \n Campo 0 no admitido: Embalaje N°
+sErrorCampLong=\n Campo Longuitud(Cm)
+sErrorCampAncho=\n Campo Ancho(Cm)
+sErrorCampAltura=\n Campo Altura(Cm)
+
+sErrorNotSelectMatNum=Tabla: Materiales \n Campo no Seleccionado: Embalaje N°
+sErrorNotInputMatNum=Tabla: Materiales \n Campo vacio: Embalaje N°
+sErrorCampMatCero=Tabla: Materiales \n Campo 0 no admitido: Embalaje N°
+sErrorCampDescMat=, Item \n Campo Descripcion del Material
+sErrorCampCant=, Item \n Campo Cantidad
+sErrorCampUNMMAt=, Item \n Campo UNM Material
+sErrorGenerateItem=No se genero ningun material para el embalaje N°
+
+
+
+
+
+
