Presentación Semana 10 Estrada Jose

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -153,6 +153,14 @@ sErrorCampCant=, Item \n Campo Cantidad
 sErrorCampUNMMAt=, Item \n Campo UNM Material
 sErrorGenerateItem=No se genero ningun material para el embalaje N°
 
+lblOrdenCompraBotonVer= Orden de compra
+lblPosicionBotonVer= Posicion
+lblCodigoMaterialBotonVer= Cod. Material
+lblDescripcionBotonVer= Descripcion
+lblCantidadMaterialesBotonVer= Cant. Materiales
+lblUnBotonVer= UN
+lblTitleMateriales= Materiales
+
 
 
 
