--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,7 @@ nextText=Siguiente
 sTextNot=No
 sTextYes=Si
 sTextConfirm=¿Deseas continuar?.
+sTextSave=¿Desea guardar los cambios?
 warningInternet=Por favor verifique su conexión a internet.
 error=error
 errorFTP=error FTP
