--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,6 +28,7 @@ errorNoDataExport=No hay registro a exportar.
 errorNoDataUser=Ingrese Usuario.
 errorNoDataPassword=Ingrese Contraseña.
 sErrorTry=Error tecnico
+sErrorSelectOrden=Seleccióne una Orden
 sErrorSelect=Selección no Encontrada
 sErrorChangeDatePicker=Formato incorrecto: 
 sTitleExport=Titulo
@@ -80,6 +81,8 @@ titleAltura=Altura (Cm)
 titleObservacion=Observación del Material
 btnGuardar=Guardar
 btnCancelar=Cancelar
+btnVaciar=Vaciar
+btnEmbalar=Embalar
 
 lblcolumnsociedad = Sociedad
 lblcolumnordencompra = Orden de Compras
@@ -108,7 +111,7 @@ lblcolumnPesoCita = Peso Embalajes(Kg)
 lblcolumnResumenMatCita = Resumen Materiales
 lblcolumnDescargarDocCita = Descargar Documento
 
-titleEmbalajes = cabecera
+titleEmbalajes = Embalajes
 btnModificar = Modificar cond. Entrega
 btnEmbalar = Embalar 
 btnCerrar = Cerrar
@@ -162,8 +165,31 @@ lblCantidadMaterialesBotonVer= Cant. Materiales
 lblUnBotonVer= UN
 lblTitleMateriales= Materiales
 
+titlecolumnObs=Observación
+titlecolumnDen=Denominación
+titlecolumnUnd=Unidad
+titlecolumnCantTot=CantidadTotal
+titlecolumnCantEmb=Cantidad a Embalar
+titlecolumnCantEmb2=Cantidad Embalada
+titlecolumnMat=Material
+titlecolumnPos=Pos.
+titlecolumnPed=Pedido de Compra
+titledescCont=Descripción del Contenido
 
-
-
-
-
+phIngresarCont=Ingresar Contenido
+phPeso=Peso
+phLonguitud=Longuitud
+phAncho=Ancho
+phAltura=Altura
+sErrorNotSelectMat=Seleccione Material
+sErrorNotSelectEmbSin=Seleccione un Embalaje
+sErrorNotExeCantTot=No debe excederse a la Cantidad Total
+sErrorNotEmbBulComp=No es posible embalar materiales con los bultos complementarios
+sSuccessEmbalar=Se embalo
+sSuccessEmbalar2=Materiales al Embalaje
+sErrorSaveOC=Las medidas del Embalaje Complementario debe ser mayor a 0
+sErrorSaveOC1=Complete todos los campos del Embalaje Complementario
+sErrorSaveOC12=Las medidas del Embalaje debe ser mayor a 0
+sErrorSaveOC13=Complete todos los campos del Embalaje
+sErrorSaveOC4=Embale un Material con un Embalaje
+sErrorSaveOC5=Embalaje sin Material
