--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -193,3 +193,10 @@ sErrorSaveOC12=Las medidas del Embalaje debe ser mayor a 0
 sErrorSaveOC13=Complete todos los campos del Embalaje
 sErrorSaveOC4=Embale un Material con un Embalaje
 sErrorSaveOC5=Embalaje sin Material
+
+lblSeleccionFechaBotonPlanificarCita = Seleccionar Fecha
+lblNoProgramados = No Programados
+lblFechaBotonPlanificarCita = Fecha
+lblHoraBotonPlanificarCita = Hora
+lblStatusBotonPlanificarCita = Status
+ErrorNoSeleccionCita = No se ha seleccionado Numero de Entrega
