cambios para jose

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -148,7 +148,7 @@ sErrorCampCero=Tabla: Embalajes \n Campo 0 no admitido: Embalaje N°
 sErrorCampLong=\n Campo Longuitud(Cm)
 sErrorCampAncho=\n Campo Ancho(Cm)
 sErrorCampAltura=\n Campo Altura(Cm)
-
+sErrorHoraTrabajadas=No hay data funcion HORA_TRABAJADAS\n Revisar Tabla Constante
 sErrorNotSelectMatNum=Tabla: Materiales \n Campo no Seleccionado: Embalaje N°
 sErrorNotInputMatNum=Tabla: Materiales \n Campo vacio: Embalaje N°
 sErrorCampMatCero=Tabla: Materiales \n Campo 0 no admitido: Embalaje N°
@@ -156,7 +156,7 @@ sErrorCampDescMat=, Item \n Campo Descripcion del Material
 sErrorCampCant=, Item \n Campo Cantidad
 sErrorCampUNMMAt=, Item \n Campo UNM Material
 sErrorGenerateItem=No se genero ningun material para el embalaje N°
-
+sErrorHorarioCentro = No hay data Horario con el centro\n Revisar Tabla Constante
 lblOrdenCompraBotonVer= Orden de compra
 lblPosicionBotonVer= Posicion
 lblCodigoMaterialBotonVer= Cod. Material
@@ -164,7 +164,7 @@ lblDescripcionBotonVer= Descripcion
 lblCantidadMaterialesBotonVer= Cant. Materiales
 lblUnBotonVer= UN
 lblTitleMateriales= Materiales
-
+sErrorRangoMenorFecha=Seleccione rango de fecha menor a una semana
 titlecolumnObs=Observación
 titlecolumnDen=Denominación
 titlecolumnUnd=Unidad
@@ -175,7 +175,7 @@ titlecolumnMat=Material
 titlecolumnPos=Pos.
 titlecolumnPed=Pedido de Compra
 titledescCont=Descripción del Contenido
-
+phFormatFecha=YYYY/MM/DD
 phIngresarCont=Ingresar Contenido
 phPeso=Peso
 phLonguitud=Longuitud
@@ -193,7 +193,7 @@ sErrorSaveOC12=Las medidas del Embalaje debe ser mayor a 0
 sErrorSaveOC13=Complete todos los campos del Embalaje
 sErrorSaveOC4=Embale un Material con un Embalaje
 sErrorSaveOC5=Embalaje sin Material
-
+sErrorHorasTrabMayor0=El número de horas trabajadas por día\n debe ser mayor a 0
 lblSeleccionFechaBotonPlanificarCita = Seleccionar Fecha
 lblNoProgramados = No Programados
 lblFechaBotonPlanificarCita = Fecha
