--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,13 +32,13 @@ sErrorSelectOrden=Seleccióne una Orden
 sErrorSelect=Selección no Encontrada
 sErrorChangeDatePicker=Formato incorrecto: 
 sTitleExport=Titulo
-
+sErrorDeleteOneEnt=Solo se puede eliminar una Entrega
 titleInitSession=Iniciar Sesión
 titleLogin=Inicio de Usuario
 titleMain=Solicitar Cita
 titleOrderNoOC=Entrega Sin Orden de Compra
 textbtnHome=¿Deseas volver al menú de aplicaciones?.
-
+sConfirmDeleteEnt=¿Desea eliminar la Entrega?
 textLogin=Ingresar
 tooltipLogin=Ingresar
 textIconTabFilterPedEmb=Pedidos por Embalar
@@ -50,7 +50,7 @@ textButtonOrderNoOC=Entregas sin OC
 textButtonOrdenOC=Entrega con OC
 tooltipRefresh=Refrescar
 tooltipHome=Ir al menu principal
-
+sSuccessDeleteEnt=La entrega ha sido eliminada.
 titleFormOrderNoOC=Cabecera
 lbCondicionEntrega=Condición Entrega
 lbEmpresa=Empresa
