--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -200,3 +200,5 @@ lblFechaBotonPlanificarCita = Fecha
 lblHoraBotonPlanificarCita = Hora
 lblStatusBotonPlanificarCita = Status
 ErrorNoSeleccionCita = No se ha seleccionado Numero de Entrega
+
+sErroCamposEmbalar = Seleccione ordenes de un mismo almacén
