--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -202,3 +202,4 @@ lblStatusBotonPlanificarCita = Status
 ErrorNoSeleccionCita = No se ha seleccionado Numero de Entrega
 
 sErroCamposEmbalar = Seleccione ordenes de un mismo almacén
+sErrorMaterialesEmbalados = Seleccione un Embalaje sin Materiales Embalados
