--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -200,6 +200,7 @@ lblFechaBotonPlanificarCita = Fecha
 lblHoraBotonPlanificarCita = Hora
 lblStatusBotonPlanificarCita = Status
 ErrorNoSeleccionCita = No se ha seleccionado Numero de Entrega
-
+sErrorNoVaciarEmbComp=No es posible vaciar materiales de bultos complementarios
 sErroCamposEmbalar = Seleccione ordenes de un mismo almacén
 sErrorMaterialesEmbalados = Seleccione un Embalaje sin Materiales Embalados
+sErrorSelectEmbInMat=Selecione un Embalaje con Materiales Embalados
