--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -204,3 +204,6 @@ sErrorNoVaciarEmbComp=No es posible vaciar materiales de bultos complementarios
 sErroCamposEmbalar = Seleccione ordenes de un mismo almacén
 sErrorMaterialesEmbalados = Seleccione un Embalaje sin Materiales Embalados
 sErrorSelectEmbInMat=Selecione un Embalaje con Materiales Embalados
+sErrorNoMaterial=No se ha seleccionado ningun material
+sConfirmDeleteMat=¿Seguro que desea eliminar? \n Se actualizaran los materiales
+sConfirmDeleteEmb=¿Seguro que desea eliminar? \n Se eliminaran todos los materiales relacionados al embalaje \n Se actualizaran los embalajes y materiales
