--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -195,6 +195,7 @@ sErrorSaveOC4=Embale un Material con un Embalaje
 sErrorSaveOC5=Embalaje sin Material
 sErrorHorasTrabMayor0=El número de horas trabajadas por día\n debe ser mayor a 0
 lblSeleccionFechaBotonPlanificarCita = Seleccionar Fecha
+lblSeleccionHoraBotonPlanificarCita = Seleccionar Hora
 lblNoProgramados = No Programados
 lblFechaBotonPlanificarCita = Fecha
 lblHoraBotonPlanificarCita = Hora
@@ -207,3 +208,7 @@ sErrorSelectEmbInMat=Selecione un Embalaje con Materiales Embalados
 sErrorNoMaterial=No se ha seleccionado ningun material
 sConfirmDeleteMat=¿Seguro que desea eliminar? \n Se actualizaran los materiales
 sConfirmDeleteEmb=¿Seguro que desea eliminar? \n Se eliminaran todos los materiales relacionados al embalaje \n Se actualizaran los embalajes y materiales
+sErrorNotDate=Ingrese Fecha
+sErrorFormatIncorrect=Formato Incorrecto: YYYY/MM/DD
+sErrorSelectDateEst=Selección a partir de la fecha establecida:
+sErrorFechaNoDisp=NO ES POSIBLE SELECCIONAR, FECHA NO DISPONIBLE
