--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -51,6 +51,7 @@ textButtonOrdenOC=Entrega con OC
 tooltipRefresh=Refrescar
 tooltipHome=Ir al menu principal
 sSuccessDeleteEnt=La entrega ha sido eliminada.
+sSuccessDeleteCita=La cita ha sido eliminada.
 titleFormOrderNoOC=Cabecera
 lbCondicionEntrega=Condición Entrega
 lbEmpresa=Empresa
@@ -212,3 +213,4 @@ sErrorNotDate=Ingrese Fecha
 sErrorFormatIncorrect=Formato Incorrecto: YYYY/MM/DD
 sErrorSelectDateEst=Selección a partir de la fecha establecida:
 sErrorFechaNoDisp=NO ES POSIBLE SELECCIONAR, FECHA NO DISPONIBLE
+sConfirmDeleteCita=¿Desea eliminar la cita? \n Nota: Al volver a generar la cita probablemente no encuentre disponibilidad en el mismo horario
