--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -36,7 +36,8 @@ sErrorDeleteOneEnt=Solo se puede eliminar una Entrega
 titleInitSession=Iniciar Sesión
 titleLogin=Inicio de Usuario
 titleMain=Solicitar Cita
-titleOrderNoOC=Entrega Con Orden de Compra
+titleOrderNoOC=Entrega Sin Orden de Compra
+titleOrderNoOC2=Entrega Con Orden de Compra
 textbtnHome=¿Deseas volver al menú de aplicaciones?.
 sConfirmDeleteEnt=¿Desea eliminar la Entrega?
 textLogin=Ingresar
