--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -45,6 +45,7 @@ tooltipLogin=Ingresar
 textIconTabFilterPedEmb=Pedidos por Embalar
 textIconTabFilterGenCit=Generar Cita
 textIconTabFilterCitEnt=Citas y Entregas
+textIconTabFilterTrazabilidad=Trazabilidad
 textButtonChangeOrder=Modificar Entrega
 textButtonDeleteOrder=Eliminar Entrega
 textButtonOrderNoOC=Entregas sin OC
